[tool.poetry]
name = "wave-havoc"
version = "0.1.0"
description = "application to download, parse and transform KNMI data in order to output extreme weather dataset."
authors = ["Koen Leijsten <koenleijsten@gmail.com>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
build = "1.1.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
idna = "3.6"
installer = "0.7.0"
jaraco-classes = "3.3.1"
keyring = "24.3.1"
more-itertools = "10.2.0"
msgpack = "1.0.8"
numpy = "1.26.4"
packaging = "24.0"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.0"
ptyprocess = "0.7.0"
py4j = "0.10.9.7"
pycparser = "2.21"
pyproject-hooks = "1.0.0"
pyspark = "3.5.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
rapidfuzz = "3.6.2"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
tomlkit = "0.12.4"
trove-classifiers = "2024.3.3"
tzdata = "2024.1"
urllib3 = "2.2.1"
virtualenv = "20.25.1"
xattr = "1.1.0"
pre-commit = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
